laborations/lab1/testsuite/bad/bad004.cc
using ;

int main () {
	return 0;
}
